# CoroDB

./: .gitignore  CMakeLists.txt  compile_commands.json  readMe
include/: BTree.hpp  CoroPool.hpp  DatabaseManager.hpp  DiskManager.hpp  FileDescriptor.hpp  IndexManager.hpp  IndexMetaData.hpp  IndexPageHandler.hpp  IoProcessor.hpp  IoScheduler.hpp  Iouring.hpp  PageHandler.hpp  Parser.hpp  RecordPageHandler.hpp  Statement.hpp  SyncWaiter.hpp  Table.hpp  TableMetaData.hpp  TableRecord.hpp  Task.hpp  ThreadPool.hpp  Util.hpp
src/: BTree.cpp  CoroPool.cpp  DatabaseManager.cpp  DiskManager.cpp  IndexManager.cpp  IndexPageHandler.cpp  IoScheduler.cpp  Iouring.cpp  PageHandler.cpp  Parser.cpp  RecordPageHandler.cpp  Table.cpp  ThreadPool.cpp  Util.cpp  main.cpp
test/: testCommands.txt
test/DiskTest/: CMakeLists.txt  DiskTest.cpp  compile_commands.json
test/TableTest/: TableTest.cpp
